--- a/Bevut/app/templates/app/app_layout.html
+++ b/Bevut/app/templates/app/app_layout.html
@@ -13,9 +13,18 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  <main>
-        {% block content %}{% endblock %}
-  </main>
+<main>
+    {% if messages %}
+    <div class="container">
+        <div class="messages">
+            {% for message in messages %}
+            <div class="card-panel {% if message.tags %}{{ message.tags }}{% endif %}">{{ message }}</div>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+    {% block content %}{% endblock %}
+</main>
   <footer class="page-footer black-text grey lighten-3" style="margin-top: 70px;">
     <div class="container">
       <div class="row footer-text">
