--- a/Bevut/app/templates/app/form.html
+++ b/Bevut/app/templates/app/form.html
@@ -104,10 +104,67 @@
 {% block content %}
 
 <div id="state-holder" class="container {% if midterm_in_progress %}midterm{% endif %} {% if fullterm_in_progress %}fullterm{% endif %}">
+    <a class="btn grey lighten-3 black-text" href="{% url 'readonly_studentform' student_form.link_uuid %}">Utskriftsvänlig detaljerad vy</a>
     <h2>{{ student_form.student }} <br /><small class="grey-text">Bedömning i {{ student_form.course }}</small></h2>
-    <a class="btn grey lighten-3 black-text" href="{% url 'readonly_studentform' student_form.link_uuid %}">Utskriftsvänlig version</a>
     <form method="POST">
     {% csrf_token %}
+    <div class="row">
+        <div class="col s12">
+            {% if student_form.midterm_signed and student_form.midterm_action_plan == 'yes' %}
+            <div class="card red white-text">
+                <div class="card-content">
+                    <h4>Risk för underkännande</h4>
+                    <p>Vid risk för underkännande måste en åtgärdsplan upprättas</p>
+                </div>
+                <div class="card-action white black-text">
+                    <p class="checkbox white-text">
+                        <input type="checkbox" name="action_plan" id="action_plan" value="started"/>
+                        <label for="action_plan">Åtgärdsplan har upprättats</label>
+                    </p>
+                    <div class="input-field">
+                        <input type="submit" value="Uppdatera" class="btn"/>
+                    </div>
+                </div>
+            </div>
+            {% elif student_form.midterm_action_plan == 'started' %}
+            <div class="card-panel red lighten-2 white-text">
+                <h4>Risk för underkännande</h4>
+                <p>Åtgärdsplan har upprättats efter halvtidsbedömning</p>
+            </div>
+            {% endif %}
+        </div>
+        <div class="col s12 m6">
+            <div class="card-panel blue-grey darken-2 white-text">
+                <h5>Halvtidsbedömning</h5>
+                {% if student_form.midterm_signed %}
+                <h4>Slutförd {{student_form.midterm_signed_date}}</h4>
+
+                {% elif midterm_in_progress %}
+                <h4>Påbörjad</h4>
+                {% else %}
+                <h4>Ej genomförd</h4>
+                <a class="waves-effect waves-light btn" href="?term=midterm">Påbörja</a>
+                {% endif %}
+            </div>
+        </div>
+
+        <div class="col s12 m6">
+            <div class="card-panel blue-grey darken-2 white-text">
+                <h5>Heltidsbedömning</h5>
+                {% if student_form.fullterm_signed %}
+                <h4>Slutförd {{student_form.fullterm_signed_date}}</h4>
+                {% elif fullterm_in_progress %}
+                <h4>Påbörjad</h4>
+                {% else %}
+                <h4>Ej genomförd</h4>
+                <a class="waves-effect waves-light btn" {% if not student_form.midterm_signed %}disabled{% endif %} href="?term=fullterm">Påbörja</a>
+                {% if not student_form.midterm_signed %}
+                Halvtidsbedöming inte klar
+                {% endif %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
         <div class="card-panel grey lighten-5">
             <h5>Information</h5>
             <div class="input-field">
@@ -126,123 +183,83 @@
                 <input type="submit" value="Uppdatera" class="btn-large"/>
             </div>
         </div>
+        
         <div class="row">
             <div class="col s12">
                 <div class="card-panel blue-grey darken-2 white-text">
-                <h5>Halvtidsbedömning</h5>
-                {% if student_form.midterm_signed %}
-                    <h4>Slutförd {{student_form.midterm_signed_date}}</h4>
-                    
-                {% elif midterm_in_progress %}
-                <h4>Påbörjad</h4>
-                {% else %}
-                <h4>Ej genomförd</h4>
-                <a class="waves-effect waves-light btn" href="?term=midterm">Påbörja</a>
-                {% endif %}
-                </div>
-            </div>
-            <div class="col s12">
-            {% if student_form.midterm_signed and student_form.midterm_action_plan == 'yes' %}
-            <div class="card-panel red lighten-3 white-text">
-                <h4>Risk för underkännande</h4>
-                <p>Vid risk för underkännande måste en åtgärdsplan upprättas</p>
-                <p class="checkbox white-text">
-                    <input type="checkbox" name="action_plan" id="action_plan" value="started"/>
-                    <label for="action_plan">Åtgärdsplan har upprättats</label>
-                    <div class="input-field">
-                        <input type="submit" value="Uppdatera" class="btn"/>
-                    </div>
-                </p>
-            </div>
-            {% elif student_form.midterm_action_plan == 'started' %}
-            <div class="card-panel red lighten-2 white-text">
-                <h4>Risk för underkännande</h4>
-                <p>Åtgärdsplan har upprättats efter halvtidsbedömning</p>
-            </div>
-            {% endif %}
-            </div>
-            <div class="col s12">
-                <div class="card-panel blue-grey darken-2 white-text">
-                <h5>Heltidsbedömning</h5>
-                {% if student_form.fullterm_signed %}
-                <h4>Slutförd {{student_form.fullterm_signed_date}}</h4>
-                {% elif fullterm_in_progress %}
-                <h4>Påbörjad</h4>
-                {% else %}
-                <h4>Ej genomförd</h4>
-                <a class="waves-effect waves-light btn" {% if not student_form.midterm_signed %}disabled{% endif %} href="?term=fullterm">Påbörja</a>
-                {% if not student_form.midterm_signed %}
-                Halvtidsbedöming inte klar
-                {% endif %}
-                {% endif %}
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s6">
-                <div class="card-panel grey lighten-5">
                     <h4>Om kursen</h4>
                     <p>
                         {{student_form.course.description}}
                     </p>
                 </div>
             </div>
-            <div class="col s6">
-                <div class="card-panel grey lighten-5 help-midterm">Vid halvtidbedömning</div>
-                <div class="card-panel grey lighten-5 help-fullterm">Vid heltidsbedömning</div>
-            </div>
         </div>
-        <div class="questions row">
-            {% for question in student_form.template.formoption_set.all %}
-            {% with answer=current_answers|get_item:question.id %}
-            <div class="question col s12 m6">
-                {% if midterm_in_progress %}
-                <input type="hidden" name="{{question.id}}" value="{{ midterm_answers|get_item:question.id }}"/>
-                {% endif %}
-                {% if fullterm_in_progress %}
-                <input type="hidden" name="{{question.id}}" value="{{ fullterm_answers|get_item:question.id }}"/>
-                {% endif %}
-                <div class="card-panel blue-grey darken-2 white-text">
-                    <div class="row">
-                        <div class="col s12">
-                            <h4>{{question.nr}}</h4>
-                        </div>
-                        <div class="col s12 question-description">{{ question.description }}</div>
-                    </div>
+    <div class="questions row">
+        <div class="col s12">
+                <div class="row">
+                    <div class="col s5 push-s1 m3 push-m3 card-panel grey lighten-5 help-midterm">Vid halvtidbedömning</div>
+                    <div class="col s5 push-s1 m3 push-m3 card-panel grey lighten-5 help-fullterm">Vid heltidsbedömning</div>
                 </div>
-                <div data-answer="G" class="card-panel grey lighten-5 answer-box{% if show_midterm_answer and midterm_answers|get_item:question.id == "OK"%} result-OK{%endif%}{% if answer == "OK" %} result-OK{%endif%}{% if answer == "G" %} result-G{%endif%}{% if answer %} collapsed{% endif %}">
-                    <div class="row">
-                        <div class="col s12 flow-text select">
-                            Godkänt
-                        </div>
-                        <div class="col s10 desc"><div class="description">{{question.done_description}}</div></div>
-                        <div class="col s2 switch toggle"><i class="material-icons">import_export</i></div>
+        </div>
+        {% for question in student_form.template.formoption_set.all %}
+        {% with answer=current_answers|get_item:question.id %}
+        <div class="question col s12 m6">
+            {% if midterm_in_progress %}
+            <input type="hidden" name="{{question.id}}" value="{{ midterm_answers|get_item:question.id }}"/>
+            {% endif %}
+            {% if fullterm_in_progress %}
+            <input type="hidden" name="{{question.id}}" value="{{ fullterm_answers|get_item:question.id }}"/>
+            {% endif %}
+            <div class="card-panel blue-grey darken-2 white-text">
+                <div class="row">
+                    <div class="col s12">
+                        <h4>{{question.nr}}</h4>
                     </div>
+                    <div class="col s12 question-description">{{ question.description }}</div>
                 </div>
-                {% if student_form.template.has_well_done and not midterm_in_progress %}
-                <div data-answer="VG" class="card-panel grey lighten-5 answer-box{% if answer == "VG" %} result-VG{%endif%}{% if answer %} collapsed{% endif %}">
-                    <div class="row">
-                        <div class="col m4 s12 flow-text select">
-                            Väl godkänt
-                        </div>
-                        <div class="col s10 desc"><div class="description">{{question.well_done_description}}</div></div>
-                        <div class="col s2 switch toggle"><i class="material-icons">import_export</i></div>
+            </div>
+            <div data-answer="G" class="card-panel grey lighten-5 answer-box{% if show_midterm_answer and midterm_answers|get_item:question.id == "OK"%} result-OK{%endif%}{% if answer == "OK" %} result-OK{%endif%}{% if answer == "G" %} result-G{%endif%}{% if answer %} collapsed{% endif %}">
+                <div class="row">
+                    <div class="col s12 select">
+                        <h5>Godkänt</h5>
                     </div>
-                </div>
-                {% endif %}
-                <div data-answer="U" class="card-panel grey lighten-5 answer-box {% if show_midterm_answer and midterm_answers|get_item:question.id == "V"%} result-V{%endif%}{% if answer == "V" %} result-V{%endif%}{% if answer == "U" %} result-U{%endif%}{% if answer %} collapsed{% endif %}">
-                    <div class="row hide-print">
-                        <div class="col s12 flow-text select">
-                            Underkänt
-                        </div>
-                        <div class="col s10 desc"><div class="description">{{question.not_done_description}}</div></div>
-                        <div class="col s2 switch toggle"><i class="material-icons">import_export</i></div>
+                    <div class="col s10 desc">
+                        <div class="description">{{question.done_description}}</div>
+                    </div>
+                    <div class="col s2 switch toggle"><i class="material-icons">import_export</i>
                     </div>
                 </div>
             </div>
-            {% endwith %}
-            {% endfor %}
+            {% if student_form.template.has_well_done and not midterm_in_progress %}
+            <div data-answer="VG" class="card-panel grey lighten-5 answer-box{% if answer == "VG" %} result-VG{%endif%}{% if answer %} collapsed{% endif %}">
+                <div class="row">
+                    <div class="col m4 s12 select">
+                        <h5>Väl godkänt</h5>
+                    </div>
+                    <div class="col s10 desc">
+                        <div class="description">{{question.well_done_description}}</div>
+                    </div>
+                    <div class="col s2 switch toggle"><i class="material-icons">import_export</i>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            <div data-answer="U" class="card-panel grey lighten-5 answer-box {% if show_midterm_answer and midterm_answers|get_item:question.id == "V"%} result-V{%endif%}{% if answer == "V" %} result-V{%endif%}{% if answer == "U" %} result-U{%endif%}{% if answer %} collapsed{% endif %}">
+                <div class="row hide-print">
+                    <div class="col s12 select">
+                        <h5>Underkänt</h5>
+                    </div>
+                    <div class="col s10 desc">
+                        <div class="description">{{question.not_done_description}}</div>
+                    </div>
+                    <div class="col s2 switch toggle"><i class="material-icons">import_export</i>
+                    </div>
+                </div>
+            </div>
         </div>
+        {% endwith %}
+        {% endfor %}
+    </div>
  
         {% if midterm_in_progress %}
         <div class="card-panel grey lighten-5">
@@ -261,7 +278,7 @@
                 </div>
                 <div class="col s12">
                     <input type="hidden" name="term" value="midterm"/>
-                    <p class="checkbox">
+                    <p class="checkbox before-input">
                         <input type="checkbox" name="sign" id="sign" value="true"/>
                         <label for="sign">Slutför och signera halvtidsbedömning</label>
                     </p>
@@ -328,7 +345,7 @@
                 </div>
                 <div class="col s12">
                     <input type="hidden" name="term" value="fullterm"/>
-                    <p class="checkbox">
+                    <p class="checkbox before-input">
                         <input type="checkbox" name="sign" id="sign" value="true"/>
                         <label for="sign">Slutför och signera heltidsbedömning</label>
                     </p>
